@@ -1,3 +1,9 @@
+Copyright (C) 2013 Koichi Shirahata.
+
+Use, modification and distribution is subject to the Boost Software
+License, Version 1.0. (See http://www.boost.org/LICENSE_1_0.txt)
+====
+Included Graph500:
 Copyright 2010, Georgia Institute of Technology, USA
 
 Redistribution and use in source and binary forms, with or without
